@@ -46,15 +46,15 @@
 */
 
 //  setup seagull environment
-require_once dirname(__FILE__)  . '/../lib/SGL/AppController.php';
+require_once dirname(__FILE__)  . '/../lib/SGL/FrontController.php';
 require_once dirname(__FILE__)  . '/../lib/SGL/Install/Tasks/Install.php';
 
-class RebuildController extends SGL_AppController
+class RebuildController extends SGL_FrontController
 {
     function run()
     {
         if (!defined('SGL_INITIALISED')) {
-            SGL_AppController::init();
+            SGL_FrontController::init();
         }
         //  get config singleton
         $c = &SGL_Config::singleton();
