@@ -1,5 +1,5 @@
 <?php
-require_once dirname(__FILE__) . '/../AppController.php';
+require_once dirname(__FILE__) . '/../FrontController.php';
 
 /**
  * Test suite.
@@ -7,29 +7,29 @@ require_once dirname(__FILE__) . '/../AppController.php';
  * @package SGL
  * @author  Demian Turner <demian@phpkitchen.net>
  * @version $Id: UrlTest.ndb.php,v 1.1 2005/06/23 14:56:01 demian Exp $
- */  
+ */
 class RendererStrategyTest extends UnitTestCase {
 
     function RendererStrategyTest()
     {
         $this->UnitTestCase('Renderer Strategy Test');
     }
-    
+
     function testHtmlFlexyRendererStrategySetupPlugins()
     {
 
     }
-    
+
     function testHtmlFlexyRendererStrategyInitEngine()
     {
 
     }
-    
+
     function testHtmlFlexyRendererStrategyRender()
     {
 
     }
-    
+
     function xtestHtmlViewPostProcess()
     {
         $output = new SGL_Output();
@@ -43,7 +43,7 @@ class RendererStrategyTest extends UnitTestCase {
                    ));
         $process->process($output);
     }
-    
+
     function xtestProcessRun()
     {
         $process = new SGL_Init(
