@@ -86,9 +86,9 @@ if ($pearTest != '@' . 'PHP-DIR'. '@') {
 }
 
 session_start();
-require_once $rootDir . '/lib/SGL/AppController.php';
+require_once $rootDir . '/lib/SGL/FrontController.php';
 require_once $rootDir . '/lib/SGL/Install/Common.php';
-SGL_AppController::init();
+SGL_FrontController::init();
 
 //  reroute to front controller
 if (isset($_GET['start'])) {
